# test_service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/core/database/: __init__.py  pg_database.py  redis_database.py
app/core/ioc/providers/: __init__.py  db_providers.py  setup_providers.py
