[tool.poetry]
name = "test-service"
version = "0.1.0"
description = ""
authors = ["duetoo <wanderinghands11@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.135.1"
asyncpg = "^0.31.0"
dishka = "^1.8.0"
uvicorn = "^0.41.0"
SQLAlchemy = "^2.0.47"
pydantic-settings = "^2.13.1"
redis = {extras = ["asyncio"], version = "^7.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
